@@ -1,3 +1,9 @@
+ 2003-05-23  Andrew Lunn  <andrew.lunn@ascom.ch>
+ 
+ 	* src/network_support.c (init_all_network_interfaces): Allow IPv4
+ 	or IPv6 addresses to be used when configuring a default DNS
+ 	server.
+ 
 2003-05-21  Andrew Lunn  <andrew.lunn@ascom.ch>
 
 	* src/getaddrinfo.c (getaddrinfo): Corrected a bad patch merge
